[ Issue #1 ] Add internazionalization with i18next + remove build script from start + detach version script from build

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
 	"scripts": {
 		"inito": "npm install --save-dev npm && node ./scripts/inito.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "node ./scripts/version.js && NODE_ENV=production webpack -p",
+		"version": "node ./scripts/version.js",
+		"build": "NODE_ENV=production webpack -p",
 		"watch": "webpack --progress --watch",
-		"start": "NODE_ENV=development npm run build && webpack-dashboard -- webpack-dev-server --open --port=8080",
+		"start": "NODE_ENV=development && webpack-dashboard -- webpack-dev-server --open --port=8080",
 		"lint:js": "eslint src/ --cache",
 		"git:remove": "rm -rf .git",
 		"git:init": "git init",
@@ -49,10 +50,13 @@
 	},
 	"dependencies": {
 		"create-component-app": "^1.7.0",
+		"i18next": "^19.3.3",
+		"i18next-xhr-backend": "^3.2.2",
 		"jss": "^10.0.4",
 		"jss-preset-default": "^10.0.4",
 		"react": "^16.13.0",
 		"react-dom": "^16.13.0",
+		"react-i18next": "^11.3.4",
 		"react-router": "^5.1.2",
 		"react-router-dom": "^5.1.2",
 		"wretch": "^1.7.1"
