--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
-	"presets": ["@babel/preset-env", "@babel/preset-react"],
-	"plugins": [
-		"transform-object-rest-spread",
-		"syntax-dynamic-import",
-		["@babel/plugin-proposal-decorators", { "legacy": true }]
-	]
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": [
+    ["@babel/plugin-proposal-object-rest-spread", { "loose": true, "useBuiltIns": true }],
+    "syntax-dynamic-import",
+    ["@babel/plugin-proposal-decorators", { "legacy": true }]
+  ]
 }
