--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
     "create-component-app": "^1.7.0",
     "i18next": "^19.3.3",
     "i18next-xhr-backend": "^3.2.2",
-    "jss": "^10.0.4",
-    "jss-preset-default": "^10.0.4",
+    "jss": "^10.1.1",
+    "jss-global": "^3.0.0",
+    "jss-plugin-camel-case": "^10.1.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-i18next": "^11.3.4",
+    "react-jss": "^10.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "wretch": "^1.7.1"
