--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
-  "printWidth": 100
+  "printWidth": 100,
+  "spaceBeforeFunctionParen": true,
+  "arrowParens": "avoid"
 }
