--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inito",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Init React app with: webpack 5, wepback-dev-server, eslint, jss, proptypes, babel, react 18, react-router 6 with code splitting",
   "main": "index.js",
   "scripts": {
@@ -37,6 +37,7 @@
     "eslint-plugin-react": "^7.19.0",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "i18next-hmr": "^1.7.5",
     "imagemin-webpack-plugin": "^2.4.2",
     "node-sass": "^4.13.1",
     "npm": "^6.14.3",
