--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "module": "commonjs",
     "paths": {
+      "@app/*": ["./src/*"],
       "@components/*": ["./src/components/*"],
       "@layout/*": ["./src/layout/*"],
       "@pages/*": ["./src/pages/*"],
