package lock regeneration

--- a/package.json
+++ b/package.json
@@ -1,1 +1,80 @@
-{"name":"inito","version":"2.2.1","description":"Init React app with: webpack 5, wepback-dev-server, eslint, jss, proptypes, babel, react 18, react-router 6 with code splitting","main":"index.js","scripts":{"test":"echo \"Error: no test specified\" && exit 1","version":"node ./scripts/version.js","build":"webpack --mode=production","watch":"webpack --progress --watch","start":"npm run build && webpack-dev-server --mode=development","lint:js":"eslint src/ --cache","prettier":"prettier --write 'src/**/*.js'","git:remove":"rm -rf .git","git:init":"git init","generate:component":"node_modules/create-component-app/dist/index.js --template component --config ./config/templates/config.component.json","generate:page":"node_modules/create-component-app/dist/index.js --template page --config ./config/templates/config.page.json"},"author":"Giovanni Bieller","license":"ISC","devDependencies":{"@babel/cli":"^7.17.6","@babel/core":"^7.17.9","@babel/plugin-proposal-decorators":"^7.8.3","@babel/plugin-proposal-object-rest-spread":"^7.9.0","@babel/preset-env":"^7.16.11","@babel/preset-react":"^7.16.7","babel-eslint":"^10.1.0","babel-loader":"^8.0.6","babel-plugin-syntax-dynamic-import":"^6.18.0","clean-webpack-plugin":"^4.0.0","copy-webpack-plugin":"^10.2.4","css-loader":"^3.4.2","eslint":"^6.8.0","eslint-loader":"^3.0.3","eslint-plugin-prettier":"^3.1.2","eslint-plugin-react":"^7.19.0","file-loader":"^5.1.0","html-webpack-plugin":"^5.5.0","i18next-hmr":"^1.7.5","imagemin-webpack-plugin":"^2.4.2","node-sass":"^7.0.0","npm":"^6.14.3","prettier":"^1.19.1","react-dev-utils":"^12.0.1","readline":"^1.3.0","style-loader":"^1.1.3","webpack":"^5.72.0","webpack-cleanup-plugin":"^0.5.1","webpack-cli":"^4.9.2","webpack-dev-server":"^4.8.1"},"dependencies":{"create-component-app":"^1.7.0","i18next":"^19.9.2","i18next-xhr-backend":"^3.2.2","jss":"^10.9.0","jss-global":"^3.0.0","jss-plugin-camel-case":"^10.9.0","jss-plugin-nested":"^10.9.0","react":"^18.0.0","react-dom":"^18.0.0","react-helmet":"^6.1.0","react-i18next":"^11.16.7","react-jss":"^10.9.0","react-router":"^6.3.0","react-router-dom":"^6.3.0","wretch":"^1.7.1"},"cca":{"type":"component","templatesDirPath":"./config/templates","templateName":"component","path":"./src/components"},"repository":{"type":"git","url":"https://github.com/giovannibieller/inito.git"}}
+{
+  "name": "inito",
+  "version": "2.2.1",
+  "description": "Init React app with: webpack 5, wepback-dev-server, eslint, jss, proptypes, babel, react 18, react-router 6 with code splitting",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "version": "node ./scripts/version.js",
+    "build": "webpack --mode=production",
+    "watch": "webpack --progress --watch",
+    "start": "npm run build && webpack-dev-server --mode=development",
+    "lint:js": "eslint src/ --cache",
+    "prettier": "prettier --write 'src/**/*.js'",
+    "git:remove": "rm -rf .git",
+    "git:init": "git init",
+    "generate:component": "node_modules/create-component-app/dist/index.js --template component --config ./config/templates/config.component.json",
+    "generate:page": "node_modules/create-component-app/dist/index.js --template page --config ./config/templates/config.page.json"
+  },
+  "author": "Giovanni Bieller",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.9",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.2.4",
+    "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
+    "file-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "i18next-hmr": "^1.7.5",
+    "imagemin-webpack-plugin": "^2.4.2",
+    "node-sass": "^7.0.0",
+    "npm": "^6.14.3",
+    "prettier": "^1.19.1",
+    "react-dev-utils": "^12.0.1",
+    "readline": "^1.3.0",
+    "style-loader": "^1.1.3",
+    "webpack": "^5.72.0",
+    "webpack-cleanup-plugin": "^0.5.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
+  },
+  "dependencies": {
+    "create-component-app": "^1.7.0",
+    "i18next": "^19.9.2",
+    "i18next-xhr-backend": "^3.2.2",
+    "jss": "^10.9.0",
+    "jss-global": "^3.0.0",
+    "jss-plugin-camel-case": "^10.9.0",
+    "jss-plugin-nested": "^10.9.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-helmet": "^6.1.0",
+    "react-i18next": "^11.16.7",
+    "react-jss": "^10.9.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "wretch": "^1.7.1"
+  },
+  "cca": {
+    "type": "component",
+    "templatesDirPath": "./config/templates",
+    "templateName": "component",
+    "path": "./src/components"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/giovannibieller/inito.git"
+  }
+}
