--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "build": "webpack --mode=production",
     "watch": "webpack --progress --watch",
     "start": "npm run build && webpack-dev-server --mode=development",
+    "start:ui": "npx styleguidist server",
     "lint:js": "eslint src/ --cache",
     "prettier": "prettier --write 'src/**/*.js'",
     "git:remove": "rm -rf .git",
     "git:init": "git init",
     "generate:component": "node_modules/create-component-app/dist/index.js --template component --config ./config/templates/config.component.json",
+    "generate:uicomponent": "node_modules/create-component-app/dist/index.js --template uicomponent --config ./config/templates/config.uicomponent.json",
     "generate:page": "node_modules/create-component-app/dist/index.js --template page --config ./config/templates/config.page.json"
   },
   "author": "Giovanni Bieller",
@@ -44,6 +46,7 @@
     "npm": "^6.14.17",
     "prettier": "^1.19.1",
     "react-dev-utils": "^12.0.1",
+    "react-styleguidist": "^11.2.0",
     "readline": "^1.3.0",
     "style-loader": "^1.1.3",
     "webpack": "^5.73.0",
